feat(api): expose family settings
